src/parser.rs
//! We're just going to do a simple LL recursive-descent parser, with Pratt parsing for infix
//! expressions.  It's simple, robust, fast, and pretty hard to screw up.
//!
//! Pratt parsing is best described here:
//! <https://matklad.github.io/2020/04/13/simple-but-powerful-pratt-parsing.html>
//! It is extremely nice for parsing infix and postfix operators
//! with a precendence that's defined trivially by a simple look-up function.
//! I like it a lot.

use std::collections::BTreeMap;
use std::mem::Discriminant as Discr;
use std::ops::Range;

use codespan_reporting as cs;
use codespan_reporting::diagnostic::{Diagnostic, Label};
use logos::{Lexer, Logos};

use crate::ast;
use crate::*;

/// Checks whether the given value can fit in `int_size` number
/// of bits.
fn bounds_check(val: i128, int_size: u8) -> Option<(i128, u8)> {
    let bound = 2_i128.pow(int_size as u32 * 8);
    //dbg!(val, bound, bound / 2 - 1);
    if val > (bound / 2) - 1 || val <= -(bound / 2) {
        None
    } else {
        Some((val, int_size))
    }
}

/// Turn a valid number string into something Rust's `str::parse()` can parse,
/// so,
/// 123_456_I32 becomes 123456.
///
/// Ignores/chops off any trailing characters that are not digits or `_`, so
/// it's up to some other function to make sure that part is correct.
///
/// Only works for integers right now, but who needs floats anyway, amirite?
fn extract_digits(s: &str) -> String {
    /// Is the char a digit or the separator '_'?
    fn is_digitish(c: &char) -> bool {
        c.is_digit(10) || (*c) == '_'
    }
    s.chars()
        .take_while(is_digitish)
        .filter(|c| c.is_digit(10))
        .collect()
}

fn make_i8(lex: &mut Lexer<TokenKind>) -> Option<(i128, u8)> {
    let digits = extract_digits(lex.slice());
    let m = digits.parse().ok()?;
    bounds_check(m, 1)
}

fn make_i16(lex: &mut Lexer<TokenKind>) -> Option<(i128, u8)> {
    let digits = extract_digits(lex.slice());
    let m = digits.parse().ok()?;
    bounds_check(m, 2)
}

fn make_i32(lex: &mut Lexer<TokenKind>) -> Option<(i128, u8)> {
    let digits = extract_digits(lex.slice());
    let m = digits.parse().ok()?;
    bounds_check(m, 4)
}

fn make_i64(lex: &mut Lexer<TokenKind>) -> Option<(i128, u8)> {
    let digits = extract_digits(lex.slice());
    let m = digits.parse().ok()?;
    bounds_check(m, 8)
}

fn make_i128(lex: &mut Lexer<TokenKind>) -> Option<(i128, u8)> {
    let digits = extract_digits(lex.slice());
    let m = digits.parse().ok()?;
    // No bounds check, since our internal type is i128 anyway.
    //bounds_check(m, 16)
    Some((m, 16))
}

fn eat_block_comment(lex: &mut Lexer<TokenKind>) -> String {
    let mut nest_depth = 1;
    while nest_depth != 0 {
        const DELIMITER_BYTES: usize = 2;
        let next_bit = &lex.remainder().get(..DELIMITER_BYTES);
        // Lexer::bump() works in bytes, not chars, so we have to track the
        // number of bytes we are stepping forward so we don't try to lex
        // the middle of a UTF-8 char.
        let bytes_to_advance = match next_bit {
            Some("/-") => {
                nest_depth += 1;
                DELIMITER_BYTES
            }
            Some("-/") => {
                nest_depth -= 1;
                DELIMITER_BYTES
            }
            Some(other) => other
                .chars()
                .next()
                .unwrap_or_else(|| panic!("Invalid UTF-8 in input file?  This should probably never happen otherwise."))
                .len_utf8(),
            None => panic!("Unclosed block comment?"),
        };
        lex.bump(bytes_to_advance);
    }
    String::from("")
}

#[allow(missing_docs)]
#[derive(Logos, Debug, PartialEq, Clone)]
pub enum TokenKind {
    #[regex("[a-zA-Z_][a-zA-Z0-9_]*", |lex| lex.slice().to_owned())]
    Ident(String),
    #[regex("@[a-zA-Z_][a-zA-Z0-9_]*", |lex| lex.slice().to_owned())]
    TypeIdent(String),
    #[regex("true|false", |lex| lex.slice().parse())]
    Bool(bool),
    #[regex("[0-9][0-9_]*I8", make_i8)]
    #[regex("[0-9][0-9_]*I16", make_i16)]
    #[regex("[0-9][0-9_]*I32", make_i32)]
    #[regex("[0-9][0-9_]*I64", make_i64)]
    #[regex("[0-9][0-9_]*I128", make_i128)]
    IntegerSize((i128, u8)),
    #[regex("[0-9][0-9_]*", |lex| lex.slice().parse())]
    Integer(i128),

    // Decl stuff
    #[token("const")]
    Const,
    #[token("fn")]
    Fn,

    // Keywords
    #[token("let")]
    Let,
    #[token("mut")]
    Mut,
    #[token("end")]
    End,
    #[token("if")]
    If,
    #[token("then")]
    Then,
    #[token("elseif")]
    Elseif,
    #[token("else")]
    Else,
    #[token("loop")]
    Loop,
    #[token("do")]
    Do,
    #[token("return")]
    Return,
    #[token("break")]
    Break,
    #[token("type")]
    Type,
    #[token("struct")]
    Struct,
    #[token("enum")]
    Enum,

    // Punctuation
    #[token("(")]
    LParen,
    #[token(")")]
    RParen,
    #[token("{")]
    LBrace,
    #[token("}")]
    RBrace,
    #[token("[")]
    LBracket,
    #[token("]")]
    RBracket,
    #[token(",")]
    Comma,
    #[token(".")]
    Period,
    #[token(":")]
    Colon,
    #[token(";")]
    Semicolon,
    #[token("=")]
    Equals,

    // Operators
    #[token("+")]
    Plus,
    #[token("-")]
    Minus,
    #[token("*")]
    Mul,
    #[token("/")]
    Div,
    #[token("%")]
    Mod,
    #[token("and")]
    And,
    #[token("or")]
    Or,
    #[token("not")]
    Not,
    #[token("xor")]
    Xor,
    #[token("==")]
    Equal,
    #[token("/=")]
    NotEqual,
    #[token(">")]
    Gt,
    #[token("<")]
    Lt,
    #[token(">=")]
    Gte,
    #[token("<=")]
    Lte,
    #[token("^")]
    Carat,
    #[token("&")]
    Ampersand,

    #[regex(r"---.*\n", |lex| lex.slice()[3..].to_owned())]
    DocComment(String),

    // We save comment strings so we can use this same
    // parser as a reformatter or such.
    #[regex(r"--.*\n", |lex| lex.slice().to_owned())]
    #[regex(r"/-.*", eat_block_comment)]
    Comment(String),

    #[error]
    #[regex(r"[ \t\n\f]+", logos::skip)]
    Error,
}

impl TokenKind {
    /// Shortcut for std::mem::discriminant()
    fn discr(&self) -> Discr<Self> {
        std::mem::discriminant(self)
    }
}

#[derive(Debug, PartialEq, Clone)]
pub struct Token {
    pub kind: TokenKind,
    pub span: Range<usize>,
}

impl Token {
    fn new(kind: TokenKind, span: Range<usize>) -> Self {
        Token { kind, span }
    }
}

fn bop_for(t: &TokenKind) -> Option<ast::BOp> {
    match t {
        T::Plus => Some(ast::BOp::Add),
        T::Minus => Some(ast::BOp::Sub),
        T::Mul => Some(ast::BOp::Mul),
        T::Div => Some(ast::BOp::Div),
        T::Mod => Some(ast::BOp::Mod),

        T::Equal => Some(ast::BOp::Eq),
        T::NotEqual => Some(ast::BOp::Neq),
        T::Gt => Some(ast::BOp::Gt),
        T::Lt => Some(ast::BOp::Lt),
        T::Gte => Some(ast::BOp::Gte),
        T::Lte => Some(ast::BOp::Lte),

        T::And => Some(ast::BOp::And),
        T::Or => Some(ast::BOp::Or),
        T::Xor => Some(ast::BOp::Xor),
        _other => None,
    }
}

fn uop_for(t: &TokenKind) -> Option<ast::UOp> {
    match t {
        //T::Plus => Some(ast::UOp::Plus),
        T::Minus => Some(ast::UOp::Neg),
        T::Not => Some(ast::UOp::Not),
        T::Carat => Some(ast::UOp::Deref),
        T::Ampersand => Some(ast::UOp::Ref),
        _other => None,
    }
}

use self::TokenKind as T;

// This is not dead code but sometimes cargo thinks some of it fields are, since their usage is
// cfg'd out in unit tests.
#[allow(dead_code)]
struct ErrorReporter {
    files: cs::files::SimpleFiles<String, String>,
    file_id: usize,
    config: cs::term::Config,
}

impl ErrorReporter {
    fn new(filename: &str, src: &str) -> Self {
        use codespan_reporting::files::SimpleFiles;
        let mut files = SimpleFiles::new();
        let file_id = files.add(filename.to_owned(), src.to_owned());

        Self {
            files,
            file_id,
            config: codespan_reporting::term::Config::default(),
        }
    }

    fn error(&self, _diag: &Diagnostic<usize>) -> ! {
        #[cfg(not(test))]
        {
            use codespan_reporting::term::termcolor::{ColorChoice, StandardStream};
            let writer = StandardStream::stderr(ColorChoice::Always);
            cs::term::emit(&mut writer.lock(), &self.config, &self.files, _diag)
                .expect("Could not print error message");
        }
        panic!("Error somewhere in parser")
    }
}

/// The core parser struct.  It provides basic methods for
/// manipulating the input stream, and the `parse()` method to
/// try to drive the given input to completion.
pub struct Parser<'input> {
    lex: std::iter::Peekable<logos::SpannedIter<'input, TokenKind>>,
    source: &'input str,
    err: ErrorReporter,
}

impl<'input> Parser<'input> {
    pub fn new(filename: &str, source: &'input str) -> Self {
        let lex = TokenKind::lexer(source).spanned().peekable();
        let err = ErrorReporter::new(filename, source);
        Parser { lex, source, err }
    }

    /// Read all its input and returns an Ast.
    ///
    /// Currently just panics on error.
    pub fn parse(&mut self) -> ast::Ast {
        let mut decls = vec![];
        while let Some(d) = self.parse_decl() {
            decls.push(d);
        }
        ast::Ast { decls }
    }

    /// Returns the next token, with span.
    fn next(&mut self) -> Option<Token> {
        let t = self.lex.next().map(|(tok, span)| Token::new(tok, span));
        match t {
            // Recurse to skip comments
            Some(Token {
                kind: T::Comment(_),
                ..
            }) => self.next(),
            _ => t,
        }
    }

    /// Peeks the next token, with span.
    fn peek(&mut self) -> Option<Token> {
        let t = self
            .lex
            .peek()
            .map(|(tok, span)| Token::new(tok.clone(), span.clone()));
        match t {
            // Skip comments
            Some(Token {
                kind: T::Comment(_),
                ..
            }) => {
                // This must be self.lex.next(), not just self.next().
                let _ = self.lex.next();
                self.peek()
            }
            _ => t,
        }
    }

    /// Takes a string describing what it expected, and a token that is what
    /// it actually got.
    fn error(&self, expected: &str, token_or_eof: Option<Token>) -> ! {
        let diag = if let Some(got) = token_or_eof {
            let msg = format!(
                "Parse error on token {:?} from str {}.  Expected {}",
                got.kind,
                &self.source[got.span.clone()],
                expected
            );
            Diagnostic::error()
                .with_message(msg)
                .with_labels(vec![Label::primary(self.err.file_id, got.span)])
        } else {
            let len = self.source.len();
            let msg = format!("Parse error on end of file.  Expected {}", expected);
            Diagnostic::error()
                .with_message(msg)
                .with_labels(vec![Label::primary(self.err.file_id, len..len)])
        };
        self.err.error(&diag);
    }

    /// Consume a token, we don't care what it is.
    /// Presumably because we've already peeked at it.
    fn drop(&mut self) {
        self.next();
    }

    /// Consume a token that doesn't return anything
    fn expect(&mut self, expected: TokenKind) {
        match self.next() {
            Some(t) if t.kind == expected => (),
            Some(t) => {
                let msg = format!(
                    "Parse error on token {:?} from str {}.  Expected token: {:?}",
                    t.kind,
                    &self.source[t.span.clone()],
                    expected
                );
                let diag = Diagnostic::error()
                    .with_message(msg)
                    .with_labels(vec![Label::primary(self.err.file_id, t.span)]);

                self.err.error(&diag);
            }
            None => {
                let msg = format!(
                    "Parse error: Got end of input or malformed token.  Expected token: {:?}",
                    expected
                );
                let diag = Diagnostic::error()
                    .with_message(msg)
                    .with_labels(vec![Label::primary(self.err.file_id, 0..0)]);

                self.err.error(&diag);
            }
        }
    }

    /// Returns whether the next token in the stream is what is expected.
    ///
    /// Basically, we can't (easily) pass in a strongly-typed enum discriminant
    /// and have only that checked, we have to pass the full enum.
    /// Ironically, this is exactly the sort of thing I want Garnet to be
    /// able to do nicely.
    ///
    /// ...double ironically, the above paragraph is incorrect as of 1.21,
    /// because std::mem::discriminant() is better than I thought.
    fn peek_is(&mut self, expected: Discr<TokenKind>) -> bool {
        if let Some(got) = self.peek() {
            std::mem::discriminant(&got.kind) == expected
        } else {
            false
        }
    }

    /// Returns whether the next token in the stream is what is expected,
    /// and consume it if so.
    ///
    /// I ended up seeing a lot of `if self.peek_is(thing) { self.expect(thing)
    fn try_expect(&mut self, expected: Discr<TokenKind>) -> bool {
        if self.peek_is(expected) {
            self.drop();
            true
        } else {
            false
        }
    }

    /// Consume an identifier and return its interned symbol.
    /// Note this returns a VarSym, not a TypeSym...
    fn expect_ident(&mut self) -> VarSym {
        match self.next() {
            Some(Token {
                kind: T::Ident(s), ..
            }) => INT.intern(s),
            Some(Token { kind, span }) => {
                let msg = format!("Parse error: got token {:?}.  Expected identifier.", kind,);
                let diag = Diagnostic::error()
                    .with_message(msg)
                    .with_labels(vec![Label::primary(self.err.file_id, span)]);

                self.err.error(&diag);
            }
            None => {
                let msg = format!(
                    "Parse error: Got end of input or malformed token.  Expected identifier",
                );
                let diag = Diagnostic::error()
                    .with_message(msg)
                    .with_labels(vec![Label::primary(self.err.file_id, 0..0)]);

                self.err.error(&diag);
            }
        }
    }

    /// Consumes a number and returns it.
    fn expect_int(&mut self) -> i128 {
        match self.next() {
            Some(Token {
                kind: T::Integer(s),
                ..
            }) => s,
            Some(Token {
                kind: T::IntegerSize((s, _)),
                ..
            }) => s,
            Some(Token { kind, span }) => {
                let msg = format!("Parse error: got token {:?}.  Expected integer.", kind,);
                let diag = Diagnostic::error()
                    .with_message(msg)
                    .with_labels(vec![Label::primary(self.err.file_id, span)]);

                self.err.error(&diag);
            }
            None => {
                let msg = format!(
                    "Parse error: Got end of input or malformed token.  Expected integer.",
                );
                let diag = Diagnostic::error()
                    .with_message(msg)
                    .with_labels(vec![Label::primary(self.err.file_id, 0..0)]);

                self.err.error(&diag);
            }
        }
    }

    /// Returns None on EOF.
    fn parse_decl(&mut self) -> Option<ast::Decl> {
        fn parse_decl_inner(p: &mut Parser, doc_comments: Vec<String>) -> Option<ast::Decl> {
            match p.next() {
                Some(Token {
                    kind: T::DocComment(s),
                    ..
                }) => {
                    let mut dcs = doc_comments;
                    dcs.push(s);
                    parse_decl_inner(p, dcs)
                }
                Some(Token { kind: T::Const, .. }) => Some(p.parse_const(doc_comments)),
                Some(Token { kind: T::Fn, .. }) => Some(p.parse_fn(doc_comments)),
                Some(Token { kind: T::Type, .. }) => Some(p.parse_typedef(doc_comments)),
                Some(other) => p.error("start of decl", Some(other)),
                None => None,
            }
        }
        parse_decl_inner(self, vec![])
    }

    fn parse_const(&mut self, doc_comment: Vec<String>) -> ast::Decl {
        let name = self.expect_ident();
        self.expect(T::Colon);
        let typename = self.parse_type();
        self.expect(T::Equals);
        let init = self.parse_expr(0).unwrap();
        ast::Decl::Const {
            name,
            typename,
            init,
            doc_comment,
        }
    }

    fn parse_fn(&mut self, doc_comment: Vec<String>) -> ast::Decl {
        let name = self.expect_ident();
        /*
        let type_vars = if self.try_expect(T::LBracket.discr()) {
            self.parse_generic_signature()
        } else {
            vec![]
        };
        let signature = ast::Signature {
            generics: type_vars,
            ..self.parse_fn_signature()
        };
        */
        let mut signature = self.parse_fn_signature();
        signature.generics = signature.generic_type_names();
        self.expect(T::Equals);
        let body = self.parse_exprs();
        self.expect(T::End);
        ast::Decl::Function {
            name,
            signature,
            body,
            doc_comment,
        }
    }

    /// typedef = "type" ident "=" type
    fn parse_typedef(&mut self, doc_comment: Vec<String>) -> ast::Decl {
        let name = self.expect_ident();
        self.expect(T::Equals);
        let typedecl = self.parse_type();
        ast::Decl::TypeDef {
            name,
            typedecl,
            doc_comment,
        }
    }

    /*
    /// structdef = ident "{" [struct_field]* "}"
    fn parse_structdef(&mut self, doc_comment: Vec<String>) -> ast::Decl {
        let name = self.expect_ident();
        self.expect(T::LBrace);
        let (fields, typefields) = self.parse_struct_fields();
        self.expect(T::RBrace);
        ast::Decl::StructDef {
            name,
            fields,
            typefields,
            doc_comment,
        }
    }
    */

    /// signature = fn_args [":" typename]
    fn parse_fn_signature(&mut self) -> ast::Signature {
        // TODO: parse generics
        let generics = vec![];
        let params = self.parse_fn_args();
        let rettype = if self.try_expect(T::Colon.discr()) {
            self.parse_type()
        } else {
            INT.unit()
        };
        ast::Signature {
            generics,
            params,
            rettype,
        }
    }

    /*
    /// generic_signature = "[" [ident {"," ident} [","]] "]"
    ///
    /// Expects the first bracket to already be consumed
    ///
    /// Returns a vec of type var names
    fn parse_generic_signature(&mut self) -> Vec<VarSym> {
        let mut body = vec![];
        while !self.peek_is(T::RBracket.discr()) {
            let t = self.expect_ident();
            body.push(t);
            if self.try_expect(T::Comma.discr()) {
            } else {
                break;
            }
        }
        self.expect(T::RBracket);
        body
    }
    */

    /*
    /// Helper to parse a delimited list of separated items, such as this pattern:
    /// Assumes the starting token has already been consumed, it reads things until
    /// the ending token and allows trailing separators.
    /// "(" [sig {"," sig} [","]] ")"
    ///
    /// TODO: Implement
    fn _parse_delimited_helper(&mut self, ending_token: (), separator_token: (), body: ()) {
        todo!("Implement me")
        /*
        while let Some(expr) = self.parse_expr(0) {
            params.push(expr);
            if !self.peek_is(T::Comma.discr()) {
                break;
            }
            self.expect(T::Comma);
        }
            */

        /*
        while let Some((T::Ident(_i), _span)) = self.lex.peek() {
            let name = self.expect_ident();
            self.expect(T::Colon);
            let tname = self.parse_type();
            args.push((name, tname));

            if self.try_expect(T::Comma.discr()) {
            } else {
                break;
            }
        }
             */
    }
    */

    /// sig = ident ":" typename
    /// fn_args = "(" [sig {"," sig} [","]] ")"
    fn parse_fn_args(&mut self) -> Vec<(VarSym, TypeSym)> {
        let mut args = vec![];
        self.expect(T::LParen);

        while let Some((T::Ident(_i), _span)) = self.lex.peek() {
            let name = self.expect_ident();
            self.expect(T::Colon);
            let tname = self.parse_type();
            args.push((name, tname));

            if self.try_expect(T::Comma.discr()) {
            } else {
                break;
            }
        }
        self.expect(T::RParen);
        args
    }

    fn parse_fn_type(&mut self) -> TypeDef {
        // TODO: Parse generic stuffs?
        let generics = vec![];
        let params = self.parse_fn_type_args();
        let rettype = if self.try_expect(T::Colon.discr()) {
            self.parse_type()
        } else {
            INT.unit()
        };
        TypeDef::Lambda {
            generics,
            params,
            rettype,
        }
    }

    fn parse_fn_type_args(&mut self) -> Vec<TypeSym> {
        let mut args = vec![];
        self.expect(T::LParen);

        while !self.peek_is(T::RParen.discr()) {
            let tname = self.parse_type();
            args.push(tname);

            if self.try_expect(T::Comma.discr()) {
            } else {
                break;
            }
        }
        self.expect(T::RParen);
        args
    }

    fn parse_struct_fields(&mut self) -> (BTreeMap<VarSym, TypeSym>, BTreeSet<VarSym>) {
        let mut fields = BTreeMap::new();
        let typefields = BTreeSet::new();

        // TODO someday: Doc comments on struct fields
        loop {
            match self.lex.peek() {
                Some((T::Ident(_i), _span)) => {
                    let name = self.expect_ident();
                    self.expect(T::Colon);
                    let tname = self.parse_type();
                    fields.insert(name, tname);
                }
                /*
                Some((T::Type, _span)) => {
                    self.expect(T::Type);
                    let name = self.expect_ident();
                    typefields.insert(name);
                }
                */
                _ => break,
            }

            // TODO: Figure out how to not make this comma parsing jank af
            // maybe
            // {term ","} [term [","]]
            // or
            // [THING { "," THING } [","]]
            if self.try_expect(T::Comma.discr()) {
            } else {
                break;
            }
        }
        (fields, typefields)
    }

    fn parse_struct_lit_fields(&mut self) -> (Vec<(VarSym, ast::Expr)>, BTreeMap<VarSym, TypeSym>) {
        let typefields = BTreeMap::new();
        let mut fields = vec![];

        // TODO someday: Doc comments on struct fields
        loop {
            match self.lex.peek() {
                Some((T::Ident(_i), _span)) => {
                    let name = self.expect_ident();
                    self.expect(T::Equals);
                    let tname = self.parse_expr(0).unwrap();
                    fields.push((name, tname));
                }
                /*
                Some((T::Type, _span)) => {
                    self.expect(T::Type);
                    let name = self.expect_ident();
                    self.expect(T::Equals);
                    let ty = self.parse_type();
                    typefields.insert(name, ty);
                }
                */
                _ => break,
            }

            // TODO: Figure out how to not make this comma parsing jank af
            // maybe
            // {term ","} [term [","]]
            // or
            // [THING { "," THING } [","]]
            if self.try_expect(T::Comma.discr()) {
            } else {
                break;
            }
        }
        (fields, typefields)
    }

    fn parse_enum_fields(&mut self) -> Vec<(VarSym, i32)> {
        let mut current_val = 0;
        let mut variants = vec![];

        // TODO someday: Doc comments on enum fields
        loop {
            match self.lex.peek() {
                Some((T::Ident(_i), _span)) => {
                    let id = self.expect_ident();
                    if self.try_expect(T::Equals.discr()) {
                        current_val = self.expect_int() as i32;
                    }
                    variants.push((id, current_val));
                    current_val += 1;
                }
                _ => break,
            }

            // TODO: Figure out how to not make this comma parsing jank af
            // maybe
            // {term ","} [term [","]]
            // or
            // [THING { "," THING } [","]]
            if self.try_expect(T::Comma.discr()) {
            } else {
                break;
            }
        }
        // Make sure we don't have any duplicates.
        let mut seen = std::collections::HashMap::new();
        for (name, vl) in variants.iter() {
            if let Some(other) = seen.get(vl) {
                eprintln!(
                    "Duplicate variant in enum: field {} and {} both have value {}",
                    INT.fetch(*name),
                    INT.fetch(*other),
                    *vl
                );
            }
            seen.insert(*vl, *name);
        }
        variants
    }

    fn parse_tuple_type(&mut self) -> TypeDef {
        let mut body = vec![];
        while !self.peek_is(T::RBrace.discr()) {
            let t = self.parse_type();
            body.push(t);
            if self.try_expect(T::Comma.discr()) {
            } else {
                break;
            }
        }
        self.expect(T::RBrace);
        TypeDef::Tuple(body)
    }

    fn parse_struct_type(&mut self) -> TypeDef {
        self.expect(T::LBrace);
        let (fields, _typefields) = self.parse_struct_fields();
        self.expect(T::RBrace);
        TypeDef::Struct { fields }
    }

    fn parse_enum_type(&mut self) -> TypeDef {
        self.expect(T::LBrace);
        let variants = self.parse_enum_fields();
        self.expect(T::RBrace);
        TypeDef::Enum { variants }
    }

    fn parse_exprs(&mut self) -> Vec<ast::Expr> {
        let mut exprs = vec![];
        let tok = self.peek();
        while let Some(e) = self.parse_expr(0) {
            // Hey and if we have a semicolon after an expr we can just eat it
            self.try_expect(T::Semicolon.discr());
            exprs.push(e);
        }
        if exprs.is_empty() {
            self.error(
                "non-empty expression block, must have at least one value.",
                tok,
            );
        }
        exprs
    }

    /// Returns None if there is no valid expression,
    /// which usually means the end of a block or such.
    ///
    /// This departs from pure recursive descent and uses a Pratt
    /// parser to parse math expressions and such.
    fn parse_expr(&mut self, min_bp: usize) -> Option<ast::Expr> {
        let t = self.peek()?;
        let token = &t.kind;
        let mut lhs = match token {
            T::Bool(b) => {
                self.drop();
                ast::Expr::bool(*b)
            }
            T::Integer(_) => ast::Expr::int(self.expect_int() as i128),
            T::IntegerSize((_str, size)) => ast::Expr::sized_int(self.expect_int() as i128, *size),
            // Tuple literal
            T::LBrace => self.parse_constructor(),
            T::Struct => {
                // TODO: Decide on a syntax that doesn't suck ass.
                // `struct { foo = 1, bar = 2}`
                // ${ foo = 1, bar = 2 }
                // { foo = 1, bar = 2 }
                // { :foo 1, :bar 2 }
                // ???
                self.parse_struct_literal()
            }
            T::Ident(_) => {
                let ident = self.expect_ident();
                ast::Expr::Var { name: ident }
                /*
                if self.peek_is(TokenKind::LBrace.discr()) {
                    self.parse_struct_literal(ident)
                } else {
                    ast::Expr::Var { name: ident }
                }
                */
            }
            T::Let => self.parse_let(),
            T::If => self.parse_if(),
            T::Loop => self.parse_loop(),
            T::Do => self.parse_block(),
            T::Fn => self.parse_lambda(),
            T::Return => self.parse_return(),
            T::Break => {
                self.expect(T::Break);
                ast::Expr::Break
            }
            // Parenthesized expr's
            T::LParen => {
                self.drop();
                let lhs = self.parse_expr(0)?;
                self.expect(T::RParen);
                lhs
            }

            // Unary prefix ops
            x if uop_for(&x).is_some() => {
                self.drop();
                let ((), r_bp) = prefix_binding_power(&x);
                let op = uop_for(&x).expect("Should never happen");
                let rhs = self.parse_expr(r_bp)?;
                ast::Expr::UniOp {
                    op,
                    rhs: Box::new(rhs),
                }
            }
            // Something else not a valid expr
            _x => return None,
        };
        // Parse a postfix or infix expression with a given
        // binding power or greater.
        while let Some((op_token, _span)) = self.lex.peek().cloned() {
            // Is our token a postfix op?
            if let Some((l_bp, ())) = postfix_binding_power(&op_token) {
                if l_bp < min_bp {
                    break;
                }
                lhs = match op_token {
                    T::LParen => {
                        let (params, generic_types) = self.parse_function_args();
                        ast::Expr::Funcall {
                            func: Box::new(lhs),
                            params,
                            generic_types,
                        }
                    }
                    T::Colon => {
                        self.expect(T::Colon);
                        let ident = self.expect_ident();
                        let ident_expr = ast::Expr::Var { name: ident };
                        let (mut params, generic_types) = self.parse_function_args();
                        params.insert(0, lhs);
                        ast::Expr::Funcall {
                            func: Box::new(ident_expr),
                            params,
                            generic_types,
                        }
                    }
                    T::Period => {
                        self.expect(T::Period);
                        // If the period is followed by an int, it's a
                        // tuple ref, otherwise it's a struct ref.
                        let tok = self.next();
                        match tok.as_ref().map(|t| &t.kind) {
                            Some(T::Ident(i)) => ast::Expr::StructRef {
                                expr: Box::new(lhs),
                                elt: INT.intern(i),
                            },
                            // Following Rust, we do not allow numbers
                            // with suffixes as tuple indices.
                            Some(T::Integer(elt)) => {
                                assert!(*elt > -1);
                                ast::Expr::TupleRef {
                                    expr: Box::new(lhs),
                                    elt: *elt as usize,
                                }
                            }
                            _other => self.error("ident or integer", tok),
                        }
                    }
                    T::Ampersand => {
                        self.expect(T::Ampersand);
                        ast::Expr::Ref {
                            expr: Box::new(lhs),
                        }
                    }
                    T::Carat => {
                        self.expect(T::Carat);
                        ast::Expr::Deref {
                            expr: Box::new(lhs),
                        }
                    }
                    _ => return None,
                };
                continue;
            }
            // Is our token an infix op?
            if let Some((l_bp, r_bp)) = infix_binding_power(&op_token) {
                if l_bp < min_bp {
                    break;
                }
                self.drop();
                let rhs = self.parse_expr(r_bp).unwrap();
                // Not all things that parse like binary operations
                // actually produce the "BinOp" expression type.
                lhs = match op_token {
                    // x = y
                    T::Equals => ast::Expr::Assign {
                        lhs: Box::new(lhs),
                        rhs: Box::new(rhs),
                    },
                    _ => {
                        let bop = bop_for(&op_token).unwrap();
                        ast::Expr::BinOp {
                            op: bop,
                            lhs: Box::new(lhs),
                            rhs: Box::new(rhs),
                        }
                    }
                };
                continue;
            }
            // None of the above, so we are done parsing the expr
            break;
        }
        Some(lhs)
    }

    fn parse_function_args(&mut self) -> (Vec<ast::Expr>, Vec<TypeSym>) {
        let mut params = vec![];
        let mut generics = vec![];
        self.expect(T::LParen);
        // TODO: Refactor out this optional-trailing-comma pattern somehow?
        // There's now three places it's used and it's only going to grow.
        while let Some(expr) = self.parse_expr(0) {
            params.push(expr);
            // Look for generic decl's of the form
            // foo(x type I32, y, z type Bar) ...
            // TODO: This a kinda icky placeholder syntax, but it's
            // all I can think of for now.
            // It's basically the tuborfish: foo::<I32, Bar>(x, y, z)
            if self.peek_is(T::Type.discr()) {
                self.expect(T::Type);
                generics.push(self.parse_type());
            }
            if !self.peek_is(T::Comma.discr()) {
                break;
            }
            self.expect(T::Comma);
        }
        self.expect(T::RParen);
        (params, generics)
    }

    /// let = "let" ident ":" typename "=" expr
    fn parse_let(&mut self) -> ast::Expr {
        self.expect(T::Let);
        let mutable = if self.try_expect(T::Mut.discr()) {
            true
        } else {
            false
        };
        let varname = self.expect_ident();
        self.expect(T::Colon);
        let typename = self.parse_type();
        self.expect(T::Equals);
        let init = Box::new(
            self.parse_expr(0)
                .expect("Expected expression after `let ... =`, did not get one"),
        );
        ast::Expr::Let {
            varname,
            typename,
            init,
            mutable,
        }
    }

    /// return = "return" expr
    fn parse_return(&mut self) -> ast::Expr {
        self.expect(T::Return);
        let retval = Box::new(
            self.parse_expr(0)
                .expect("Expected expression after `let ... =`, did not get one"),
        );
        ast::Expr::Return { retval }
    }

    /// {"elseif" expr "then" {expr}}
    fn parse_elif(&mut self, accm: &mut Vec<ast::IfCase>) {
        while self.try_expect(T::Elseif.discr()) {
            let condition = self
                .parse_expr(0)
                .expect("TODO: be better; could not parse expr after elseif");
            self.expect(T::Then);
            let body = self.parse_exprs();
            accm.push(ast::IfCase {
                condition: Box::new(condition),
                body,
            });
        }
    }
